# nonlinear-PCA

./: .gitignore  README.md  config.json5  config_es.yaml  datasets_config.yaml  main.py  neural_networks.py  objective_function.py  pyproject.toml  run_main.sh  run_read_results.sh  utils.py
datasets/: load_data.py  synthetic_datasets.py
es_pca/: main.py  read_results.py  synthetic_datasets.py  types.py  utils.py
es_pca/data_models/: data_models.py
es_pca/layers/: init_weights_layers.py  layers.py
es_pca/metrics/: objective_function.py
es_pca/neural_network/: evolution_strategies.py  neural_network.py
layers/: layers.py
metrics/: objective_function.py
neural_network/: evolution_strategies.py  neural_network.py  solution.py
notebooks/: datasets_specs.ipynb  explained_variance_dr.ipynb  kpca_on_synthetic_datasets.ipynb  performance_graph.ipynb  read_es_results.ipynb  read_real_world_data.ipynb
