[tool.poetry]
name = "es_pca"
version = "0.1.0"
description = "software to perform non-linear PCA via evolution strategies"
authors = ["Thomas Uriot <uriot.thomas@gmail.com>"]
readme = "README.md"
packages = [
    {include = "es_pca"}
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.2"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
pydantic = "^2.5.3"
pyyaml = "^6.0.1"
matplotlib = "^3.8.2"
loguru = "^0.7.2"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
